@@ -16,7 +16,7 @@ install: build
 	dh_testroot
 	dh_clean -k
 	dh_install auto-raidcfg bin
-	debian/install-rc auto.d
+	debian/install-rc display.d
 
 binary-arch: build install
 	dh_testdir
