@@ -10,7 +10,7 @@ while [ $code = 99 ]; do
 		# 255: backup from subsidiary question; break and return to
 		# choose_partition menu
 		# 100-254: attempt to skip the manual partitioner (from
-		# auto.d), which isn't appropriate if the manual partitioner
+		# display.d), which isn't appropriate if the manual partitioner
 		# has already been displayed, so treat this exactly like
 		# backup
 		exit 0
