@@ -37,7 +37,7 @@ endif
 	debian/install-rc choose_partition
 	debian/install-rc free_space
 	debian/install-rc automatically_partition
-	debian/install-rc auto.d
+	debian/install-rc display.d
 
 binary-arch: build install
 	dh_testdir
