@@ -1,2 +1,2 @@
 bin
-/lib/partman/auto.d
+/lib/partman/display.d
