@@ -42,6 +42,7 @@ install: build
 	debian/install-rc finish.d
 	debian/install-rc update.d
 	debian/install-rc valid_visuals.d
+	debian/install-rc display.d
 
 binary-arch: build install
 	dh_testdir
