@@ -1,0 +1,2 @@
+80 manual_partitioning
+90 failsafe
