@@ -1,0 +1,5 @@
+#!/bin/sh
+
+# We should never be here.  Back up to main menu
+
+exit 255
