@@ -1,0 +1,11 @@
+#!/bin/sh
+
+. /lib/partman/definitions.sh
+
+if ask_user /lib/partman/choose_partition; then
+	exitcode=99 # repeat the display.d loop
+else
+	exitcode=$?
+fi
+
+exit $exitcode
