@@ -59,53 +59,36 @@ while true; do
 	done
 	db_progress STOP
 
-	skip_choose_partition=no
-	for s in /lib/partman/auto.d/*; do
-		if [ -x $s ]; then
-			#logger -t partman "Running auto.d/$s"
-			$s
-			exitcode=$?
-			if [ $exitcode -eq 255 ]; then
-				abort 10 # back up to main menu
-			elif [ $exitcode -ge 100 ]; then
-				# Partitioning complete; go straight to
-				# confirmation. (To present choose_partition
-				# so that the user can edit the results of
-				# manual partitioning, just exit 0 instead.)
-				skip_choose_partition=yes
-				break
-			elif [ $exitcode -ne 0 ]; then
-				continue 2
-			fi
-		fi
-	done
-
 	while true; do
-		if [ "$skip_choose_partition" != yes ]; then
-			ask_user /lib/partman/choose_partition
-			exitcode=$?
-		else
-			exitcode=100
-		fi
-		if [ $exitcode -eq 255 ]; then
-			abort 10 # back up to main menu
-		elif [ $exitcode -ge 100 ]; then
-			for s in /lib/partman/check.d/*; do
-				if [ -x $s ]; then
-					#logger -t partman "Running check.d/$s"
-					if ! $s; then
-						skip_choose_partition=no
+		for s in /lib/partman/display.d/*; do
+			if [ -x $s ]; then
+				#logger -t partman "Running display.d/$s"
+				$s || {
+					exitcode=$?
+					if [ $exitcode -eq 255 ]; then
+						abort 10 # back up to main menu
+					elif [ $exitcode -ge 100 ]; then
+						break # successful partitioning
+					else
 						continue 2
 					fi
-				fi
-			done
-			if confirm_changes "partman"; then
-				break
+				}
 			fi
+		done
+		
+		for s in /lib/partman/check.d/*; do
+			if [ -x $s ]; then
+				#logger -t partman "Running check.d/$s"
+				if ! $s; then
+					continue 2
+				fi
+			fi
+		done
+		if confirm_changes "partman"; then
+			break
 		fi
-		skip_choose_partition=no
 	done
-
+	
 	for s in /lib/partman/commit.d/*; do
 		if [ -x $s ]; then
 			#logger -t partman "Running commit.d/$s"
@@ -117,11 +100,11 @@ while true; do
 		if [ -x $s ]; then
 			#logger -t partman "Running finish.d/$s"
 			$s || {
-				status=$?
-				if [ "$status" = 1 ]; then
+				exitcode=$?
+				if [ "$exitcode" = 1 ]; then
 					continue 2
 				else
-					abort $status
+					abort $exitcode
 				fi
 			}
 		fi
@@ -129,3 +112,5 @@ while true; do
 
 	break
 done
+
+exit 0
