@@ -8,6 +8,9 @@ partman-auto (70) UNRELEASED; urgency=low
   * Fix divide-by-zero error if the sum of the factors in the scheme is
     equal to the sum of the minimum sizes, or if we run off the maximum size
     of the recipe before we run out of disk to allocate.
+  
+  [ Anton Zinoviev ]
+  * Rename auto.d to display.d.
 
  -- Frans Pop <fjp@debian.org>  Sun, 13 May 2007 04:05:45 +0200
 
