@@ -1,6 +1,11 @@
 partman-base (110) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Resolve symlinks before looking up devices in /proc/swaps.
+  
+  [ Anton Zinoviev ]
+  * Simplify the logic of the main partman script.  Rename auto.d to
+    display.d.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 16 Jul 2007 17:43:17 +0100
 
