@@ -7,6 +7,9 @@ partman-auto-raid (6) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Fix template name given in README (partman-auto-raid/recipe, not
     partman-auto-raid/recipes).
+  
+  [ Anton Zinoviev ]
+  * Rename auto.d to display.d.
 
  -- Frans Pop <fjp@debian.org>  Sun, 13 May 2007 04:05:56 +0200
 
